# deck

./: .gitmodules  CMakeLists.txt  README.md  card.h  compile_commands.json  deck.h  deck_db.h  main.cpp
.circleci/: config.yml
src/: CMakeLists.txt  card.cpp  card.h  card_db.cpp  card_db.h  database.h  deck.cpp  deck.h  deck_db.cpp  deck_db.h  main.cpp
test/: CMakeLists.txt  card_db_test.cpp  card_test.cpp  deck_db_test.cpp  deck_test.cpp
